appId: ${APP_ID}
---
- tapOn:
    id: main-tab-board
- tapOn:
    id: board-add-button

- extendedWaitUntil:
    visible: Pair your board
    timeout: 15000
- extendedWaitUntil:
    visible: E2E VESC Board
    timeout: 15000
- tapOn: E2E VESC Board

- assertVisible: Set up your board
- tapOn:
    id: add-board-name-input
- eraseText
- inputText: E2E Board
- hideKeyboard
- tapOn:
    id: add-board-battery-series-increment
- tapOn:
    id: add-board-setup-next

- assertVisible: Review & save
- assertVisible: E2E Board
- assertVisible: E2E VESC Board
- tapOn:
    id: add-board-save

- assertVisible: E2E Board
- assertVisible: Connecting…
